--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
   "plugins": ["import", "jsx-a11y", "react", "react-hooks", "prettier"],
   "extends": ["airbnb", "prettier"],
   "rules": {
-    "prettier/prettier": "warning",
+    "prettier/prettier": 1,
     "camelcase": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
